--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="feedView" aria-hidden="true">
       <div class="feed-header">
         <div class="left">
-          <!-- ✅ Return 蓝色主按钮 -->
+          <!-- Return main button -->
           <button id="backBtn" class="btn btn-primary">← Return</button>
         </div>
 
@@ -107,7 +107,7 @@
           >
             Compare Mode
           </button>
-          <!-- ✅ 文案防溢出 -->
+
           <button
             id="toggleViewBtn"
             class="btn btn-secondary"
@@ -140,7 +140,7 @@
         </div>
       </div>
 
-      <!-- Mode notice：固定底部 -->
+      <!-- Mode notice：Fixed bottom -->
       <div id="modeNotice" role="status" aria-live="polite"></div>
 
       <div class="feed-body">
@@ -157,7 +157,7 @@
     <!-- Particle canvas -->
     <canvas id="burstCanvas" aria-hidden="true"></canvas>
 
-    <!-- 轻量站内面板 -->
+    <!-- Lightweight in-site panel -->
     <div id="panelMethod" class="sheet" hidden>
       <div class="sheet-body">
         <h3>Method</h3>
